--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,10 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client":"npm start",
+    "dev": "concurrently \"npm run server"
   },
   "author": "",
   "license": "ISC",
